--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,8 @@ black = "*"
 django = "*"
 pillow = "*"
 django-seed = "*"
+selenium = "*"
+djangorestframework = "*"
 
 [requires]
 python_version = "3.7"
